frontend/room9-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: room9-frontend
spec:
  selector:
    matchLabels:
      name: room9-frontend
  template:
    metadata:
      labels:
        name: room9-frontend
    spec:
      containers:
        - name: room9-frontend
          image: labyu/room9-frontend:45
          ports:
            - containerPort: 3000
