frontend/room9-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: room9-frontend-service
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
      name: room9-frontend
