frontend/room9-frontend-ingress.yaml

apiVersion: extensions/v1beta1

kind: Ingress
metadata:
  name: room9-frontend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - room9.shop
    secretName: room9-tls-secret
  rules:
  - host: room9.shop
    http:
      paths:
        - backend:
            serviceName: room9-frontend-service
            servicePort: 3000
